[tool.poetry]
name = "muon"
version = "0.1.0"
description = ""
authors = ["lesliewu0506 <Lesliewu0506@gmail.com>"]
readme = "README.md"
packages = [{include = "muon", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.2"
numpy = "^1.26.2"
pandas = "^2.1.3"
scipy = "^1.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
