[tool.poetry]
name = "muon"
version = "0.1.0"
description = ""
authors = ["lesliewu0506 <Lesliewu0506@gmail.com>"]
readme = "README.md"
packages = [{include = "muon", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
